moving decode logic to Decoding Facade
Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>